--- a/index.html
+++ b/index.html
@@ -1,79 +1,135 @@
-<!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link type="text/css" rel="stylesheet" media="all" href="css/jquery.highlight.css" />
+		<title></title>
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/jquery.highlight.js"></script>
+		<script type="text/javascript">
+			    $(document).ready(function(){
+					$('pre.code').highlight({source:1, zebra:1, indent:'space', list:'ol'});
+				}); 
+		</script>
+	</head>
+	<body>
+		<div>
+			<div>
+				<h1>蜂鸣器</h1>
+				<p>作者：？？？</p>
+			</div>
+			<div>
+				<div>
+					<h3>1、开始</h3>
+					<p>
+						&nbsp;&nbsp;&nbsp;&nbsp;随着市场对智能硬件的需求的增长，智能硬件相关APP的开发者也在经受着各种考验。人们更热切的需求一种简单，易懂的开发方式使APP的开发变得快速，高效。
+					</p>
+				</div>
+				<div>
+					<h3>2、为什么选择HTML</h3>
+					<p>
+						　 你可以称之为“直觉”，但是我认为移动技术将会变得更加的流行。我知道，这里有些非常疯狂的猜测，有些可能你也想到了 – Mobile是一个时尚！移动设备将占领世界。更多的接受移动设备将会增长的非常迅速。这意味着更多的用户会选择使用移动设备访问网站或者web应用。HTML5是最移动化的开发工具。随着Adobe宣布放弃移动flash开发，你将会考虑使用HTML5来开发webp应用。</p>
+				</div>
+				<div>
+					<h3>3、如何将demo Fork到你的GitHub并利用GitHub搭建一个网站</h3>
+					<div>
+						<h4>3.1 注册git账号</h4>
+						<p>
+							打开站点：<a href="https://github.com">https://github.com/</a>，注册一个账号。
+						</p>
+						<h4>3.2 将demo fork到你的账号下</h4>
+						<p>
+							  3.2.1 打开站点：<a href="https://github.com/xudChen/apps">https://github.com/xudChen/apps</a> 你会看到右上角有一个Fork按钮，点击以后（已登录状态下）选择你的账户，将demo Fork到你的账号下。
+						</p>
+						<p>
+							  3.2.2 Fork完成之后会自动跳到你的用户下的temperature项目中，你可以通过在浏览器地址栏输入https://你的用户名.github.io/temperature/就可以看到你的temperature也页面，你可以通过点击要修改的页面进入修改页面，或者把项目克隆岛本地进行修改并上传。
+						</p>
+					</div>
+				</div>
+				<div>
+					<h3>4、如何通过ajax请求获取扫描到的设备</h3>
+					<pre class="code" lang="js">
+var url = "http://127.0.0.1:8086/ble?callback=?";
+var ble = {
+	address : "local",
+	resource : "/devices/nearby",
+	operation : "read",
+	settings : "low latency"
+};
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Buzzer : ">
+$.getJSON(url,ble,function(data){
+	console.log(JSON.stringify(data));
+});
+					</pre>
+				</div>
+				<div>
+					<h3>5、选择设备之后对设备进行操作的ajax请求</h3>
+						<pre class="code" lang="js">
+var url = "http://127.0.0.1:8086/ble?callback=?";
+var ble = {
+	address : "56:a3:b3:et:a0:e1",
+	resource : "/peripherals/buzzer",
+	operation : "write",
+	value : "5s"
+};
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+$.getJSON(url,ble,function(data){
+	console.log(JSON.stringify(data));
+});
+						</pre>
+				</div>
+				<div>
+					<h3>6、示例</h3>
+					选择数据来源：<select id="test">
+									<option value="0">真实设备</option>
+									<option value="1">模拟设备</option>
+								</select>
+					<button id="selectDevice">扫描设备</button>
+					<button id="beep">Beep</button>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="js/selectDevice.js"></script>
+		<script type="text/javascript">
+		
+		var url = '';
+		
+		$(function(){
+			$('#selectDevice').click(function(){
+				selectDevice(function(data){
+					console.log(JSON.stringify(data));
+				});
+			})
+			
+			if($('#test').val()==0){
+				url = 'http://127.0.0.1:8086/ble?callback=?';
+			}else{
+				url = 'http://www.gatt.io:8080/server?callback=?';
+			}
+			
+			$('#test').change(function(){
+				if($('#test').val()==0){
+					url = 'http://127.0.0.1:8086/ble?callback=?';
+				}else{
+					url = 'http://www.gatt.io:8080/server?callback=?';
+				}
+			});
 
-    <title>Buzzer</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/xudChen/buzzer">View on GitHub</a>
-
-          <h1 id="project_title">Buzzer</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/xudChen/buzzer/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/xudChen/buzzer/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Buzzer maintained by <a href="https://github.com/xudChen">xudChen</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+		    $('#beep').click(function() { // click event handler
+				if(!(typeof DEVICEADDRESS == 'undefined')){
+					var ble = {
+						address : DEVICEADDRESS,
+						resource : "/peripherals/buzzer",
+						operation : "write",
+						value : "5s"
+					};
+					
+					$.getJSON(url,ble,function(data){
+						console.log(JSON.stringify(data));
+					});
+				}
+		    }); 
+		});
+		</script>
+	</body>
 </html>
